# cpp_lox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
src/: AstPrinter.hpp  Environment.hpp  Expr.hpp  Interpreter.hpp  Lox.hpp  Parser.hpp  Report.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  main.cpp  utils.hpp
